[package]

name = "mov_pres"
version = "0.0.1"
authors = [ "Antoine Gourlay <antoine@gourlay.fr>" ]

[dependencies]

gtk = "0.0.6"
gdk = "0.2.0"
gdk-sys = "0.2.1"
gtk-sys = "0.2.1"
glib = "0.0.7"
vlc-rs = { git = "https://github.com/Orenantedose/vlc-rs.git"}

[dependencies.x11]

version = "2.3.1"
features = ["xlib"]
